football event change input number plus and minus

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -137,6 +137,8 @@
                             [min]="-((fieldLength / 2) - 1)"
                             [max]="fieldLength / 2"
                             (incrementEvent)="incrementBallOnPosition(getEventBallReturnedTo(eventsArray, i), $event, control, eventsArray, i, fieldLength, eventBallReturnedToKey)"
+                            [plusOne]="-1"
+                            [minusOne]="1"
                           ></app-input-numbers-with-increment-buttons>
                         }
                       </div>
