football event football turnovers and lost yards

--- a/src/app/shared/scoreboards/team-match-lower-football-stats-display-flat/team-match-lower-football-stats-display-flat.component.html
+++ b/src/app/shared/scoreboards/team-match-lower-football-stats-display-flat/team-match-lower-football-stats-display-flat.component.html
@@ -25,6 +25,7 @@
           footballTeamWithStats.match_stats?.fourth_down_conversions || 0
         }} / {{ footballTeamWithStats.match_stats?.fourth_down_attempts || 0 }}
     </span>
+      <span>Потери: {{ footballTeamWithStats.match_stats?.turnovers || 0 }}</span>
     </div>
   </div>
 
