--- a/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
@@ -10,6 +10,6 @@
     /&nbsp;{{ teamWithStats.match_stats?.third_down_attempts }}</p>
   <p>4th Down Conv: {{ teamWithStats.match_stats?.fourth_down_conversions }}
     /&nbsp;{{ teamWithStats.match_stats?.fourth_down_attempts }}</p>
-  <p>Потери: {{ teamWithStats.match_stats?.turnovers }}</p>
+  <p>Turnovers: {{ teamWithStats.match_stats?.turnovers }}</p>
 }
 
