--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -83,6 +83,26 @@ label {
   //padding: 10px;
 }
 
+//.event-hash-direction-buttons-three-col {
+//  display: grid;
+//  grid-template-columns: auto auto auto;
+//  grid-template-rows: auto;
+//  grid-gap: 10px;
+//  justify-content: stretch;
+//  align-items: center;
+//  //padding: 10px;
+//}
+
+//.event-hash-direction-buttons-five-col {
+//  display: grid;
+//  grid-template-columns: auto auto auto auto auto;
+//  grid-template-rows: auto;
+//  grid-gap: 10px;
+//  justify-content: stretch;
+//  align-items: center;
+//  //padding: 10px;
+//}
+
 //.input-number-with-buttons {
 //  display: grid;
 //  grid-template-columns: 1fr auto;
