football event football forms hash and direction buttons

--- a/src/app/shared/scoreboards/admin-forms/football-events-direction-buttons/football-events-direction-buttons.component.html
+++ b/src/app/shared/scoreboards/admin-forms/football-events-direction-buttons/football-events-direction-buttons.component.html
@@ -1,6 +1,6 @@
 @if (control && eventsArray && i !== null && i !== undefined) {
   <div class="event-hash-direction-buttons-five-col">
-    <span style="grid-column: span 5" class="tui-text_body-l">DIRECTION</span>
+    <span style="grid-column: span 5; text-align: center" class="tui-text_body-s">DIRECTION</span>
     <app-toggle-button
       [eventsArray]="eventsArray"
       [index]="i"
