--- a/src/app/shared/scoreboards/admin-forms/football-events-hash-buttons/football-events-hash-buttons.component.html
+++ b/src/app/shared/scoreboards/admin-forms/football-events-hash-buttons/football-events-hash-buttons.component.html
@@ -1,6 +1,6 @@
 @if (control && eventsArray && i !== null && i !== undefined) {
   <div class="event-hash-direction-buttons-three-col">
-    <span style="grid-column: span 3" class="tui-text_body-l">HASH</span>
+    <span style="grid-column: span 3; text-align: center" class="tui-text_body-s">HASH</span>
     <app-toggle-button
       [eventsArray]="eventsArray"
       [index]="i"
