--- a/src/app/shared/ui/buttons/toggle-button/toggle-button.component.html
+++ b/src/app/shared/ui/buttons/toggle-button/toggle-button.component.html
@@ -1,7 +1,7 @@
 @if (control && eventsArray && index !== null && index !== undefined) {
   <button
     [appearance]="getButtonAppearance()"
-    [size]="'xs'"
+    [size]="'s'"
     tuiButton
     [disabled]="control.disabled"
     (click)="onToggle()"
